--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.55MB/s(Youtube:不良林), server: v5.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v5.ssrsub.com}}
-  - {name: 🇫🇷 法国-2.86MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 以色列-1.07MB/s(Youtube:不良林), server: ru1.lolvps.xyz, port: 40040, type: vmess, uuid: 2b8e4fc6-0112-4b26-8c17-1bfef9a3ff99, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /6129CFHR, ws-headers: {Host: ru1.lolvps.xyz}}
-  - {name: 🇳🇱 荷兰-951.3KB/s(Youtube:不良林), server: 213.183.59.211, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
-  - {name: 🇨🇳 中国-3.04MB/s(Youtube:不良林), server: 523hk1.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 523hk1.fans8.xyz}}
-  - {name: 🇬🇧 英国-1016.0KB/s(Youtube:不良林), server: jgwcc1.gaox.ml, port: 443, type: trojan, password: 7118b5f4-0ea4-4c11-be7f-11471cb91e4a, sni: jgwcc1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-334.5KB/s(Youtube:不良林), server: 213.183.59.214, port: 9027, type: ss, cipher: aes-256-cfb, password: EXN3S3eQpjE7EJu8}
-  - {name: 🇺🇸 美国-2.78MB/s(Youtube:不良林), server: 34.217.102.91, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
-  - {name: 未知国家-747.4KB/s(Youtube:不良林), server: v1.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v1.ssrsub.com}}
-  - {name: 🇺🇸 美国-2.32MB/s(Youtube:不良林), server: fhcarm1.gaox.ml, port: 443, type: trojan, password: 05742120-ce23-4cc8-88f5-6d221ce45bf4, sni: fhcarm1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-240.3KB/s(Youtube:不良林), server: 213.183.59.206, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
+  - {name: 🇨🇳 中国-183.0KB/s(Youtube:不良林), server: 521hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 521hk.fans8.xyz}}
+  - {name: 乌克兰-178.0KB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
+  - {name: 🇳🇱 荷兰-252.0KB/s(Youtube:不良林), server: 213.183.59.211, port: 9005, type: ss, cipher: aes-256-cfb, password: ZET59LF6DvCC8KVt}
+  - {name: 🇯🇵 日本-12.91MB/s(Youtube:不良林), server: jp1.trojan.tel, port: 443, type: trojan, password: f736834f-1fc8-4738-9884-9afe0eb0d818, sni: jp1.trojan.tel, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-9.76MB/s(Youtube:不良林), server: 3.36.93.113, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇺🇸 美国-2.17MB/s(Youtube:不良林), server: vfly9.win, port: 443, type: vmess, uuid: 825136bb-fc0a-4f43-8307-dc2e36f27e2d, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly9.win}}
+  - {name: 🇺🇸 美国-5.82MB/s(Youtube:不良林), server: 80.251.208.30, port: 22223, type: vmess, uuid: 5ce411c8-da98-44f5-ac1b-3b32ccdd8ce7, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /echo, ws-headers: {Host: 80.251.208.30}}
+  - {name: 未知国家-546.9KB/s(Youtube:不良林), server: v3.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v3.ssrsub.com}}
+  - {name: 未知国家-1.73MB/s(Youtube:不良林), server: oz.moonfree.top, port: 443, type: vmess, uuid: 6e9eeae6-c3d1-439e-9f7a-213fe09b2dbe, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: oz.moonfree.top}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.86MB/s(Youtube:不良林)
-      - 以色列-1.07MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-951.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1016.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-334.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
-      - 未知国家-747.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-240.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-183.0KB/s(Youtube:不良林)
+      - 乌克兰-178.0KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-252.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.91MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-9.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.82MB/s(Youtube:不良林)
+      - 未知国家-546.9KB/s(Youtube:不良林)
+      - 未知国家-1.73MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.86MB/s(Youtube:不良林)
-      - 以色列-1.07MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-951.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1016.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-334.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
-      - 未知国家-747.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-240.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-183.0KB/s(Youtube:不良林)
+      - 乌克兰-178.0KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-252.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.91MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-9.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.82MB/s(Youtube:不良林)
+      - 未知国家-546.9KB/s(Youtube:不良林)
+      - 未知国家-1.73MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.86MB/s(Youtube:不良林)
-      - 以色列-1.07MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-951.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1016.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-334.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
-      - 未知国家-747.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-240.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-183.0KB/s(Youtube:不良林)
+      - 乌克兰-178.0KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-252.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.91MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-9.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.82MB/s(Youtube:不良林)
+      - 未知国家-546.9KB/s(Youtube:不良林)
+      - 未知国家-1.73MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.86MB/s(Youtube:不良林)
-      - 以色列-1.07MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-951.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1016.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-334.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
-      - 未知国家-747.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-240.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-183.0KB/s(Youtube:不良林)
+      - 乌克兰-178.0KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-252.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.91MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-9.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.82MB/s(Youtube:不良林)
+      - 未知国家-546.9KB/s(Youtube:不良林)
+      - 未知国家-1.73MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.86MB/s(Youtube:不良林)
-      - 以色列-1.07MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-951.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1016.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-334.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
-      - 未知国家-747.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-240.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-183.0KB/s(Youtube:不良林)
+      - 乌克兰-178.0KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-252.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.91MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-9.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.82MB/s(Youtube:不良林)
+      - 未知国家-546.9KB/s(Youtube:不良林)
+      - 未知国家-1.73MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.86MB/s(Youtube:不良林)
-      - 以色列-1.07MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-951.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1016.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-334.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
-      - 未知国家-747.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-240.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-183.0KB/s(Youtube:不良林)
+      - 乌克兰-178.0KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-252.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.91MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-9.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.82MB/s(Youtube:不良林)
+      - 未知国家-546.9KB/s(Youtube:不良林)
+      - 未知国家-1.73MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.86MB/s(Youtube:不良林)
-      - 以色列-1.07MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-951.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1016.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-334.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
-      - 未知国家-747.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-240.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-183.0KB/s(Youtube:不良林)
+      - 乌克兰-178.0KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-252.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.91MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-9.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.82MB/s(Youtube:不良林)
+      - 未知国家-546.9KB/s(Youtube:不良林)
+      - 未知国家-1.73MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
