--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇳🇱 荷兰-240.3KB/s(Youtube:不良林), server: 213.183.59.206, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
-  - {name: 🇨🇳 中国-183.0KB/s(Youtube:不良林), server: 521hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 521hk.fans8.xyz}}
   - {name: 乌克兰-178.0KB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
   - {name: 🇳🇱 荷兰-252.0KB/s(Youtube:不良林), server: 213.183.59.211, port: 9005, type: ss, cipher: aes-256-cfb, password: ZET59LF6DvCC8KVt}
-  - {name: 🇯🇵 日本-12.91MB/s(Youtube:不良林), server: jp1.trojan.tel, port: 443, type: trojan, password: f736834f-1fc8-4738-9884-9afe0eb0d818, sni: jp1.trojan.tel, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-9.76MB/s(Youtube:不良林), server: 3.36.93.113, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
-  - {name: 🇺🇸 美国-2.17MB/s(Youtube:不良林), server: vfly9.win, port: 443, type: vmess, uuid: 825136bb-fc0a-4f43-8307-dc2e36f27e2d, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly9.win}}
-  - {name: 🇺🇸 美国-5.82MB/s(Youtube:不良林), server: 80.251.208.30, port: 22223, type: vmess, uuid: 5ce411c8-da98-44f5-ac1b-3b32ccdd8ce7, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /echo, ws-headers: {Host: 80.251.208.30}}
-  - {name: 未知国家-546.9KB/s(Youtube:不良林), server: v3.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v3.ssrsub.com}}
-  - {name: 未知国家-1.73MB/s(Youtube:不良林), server: oz.moonfree.top, port: 443, type: vmess, uuid: 6e9eeae6-c3d1-439e-9f7a-213fe09b2dbe, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: oz.moonfree.top}}
+  - {name: 🇺🇸 美国-4.73MB/s(Youtube:不良林), server: fhcarm1.gaox.ml, port: 443, type: trojan, password: 05742120-ce23-4cc8-88f5-6d221ce45bf4, sni: fhcarm1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-2.85MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 以色列-5.15MB/s(Youtube:不良林), server: ru1.lolvps.xyz, port: 40040, type: vmess, uuid: 2b8e4fc6-0112-4b26-8c17-1bfef9a3ff99, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /6129CFHR, ws-headers: {Host: ru1.lolvps.xyz}}
+  - {name: 🇺🇸 美国-546.9KB/s(Youtube:不良林), server: v3.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v3.ssrsub.com}}
+  - {name: 🇺🇸 美国-1.73MB/s(Youtube:不良林), server: oz.moonfree.top, port: 443, type: vmess, uuid: 6e9eeae6-c3d1-439e-9f7a-213fe09b2dbe, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: oz.moonfree.top}}
+  - {name: 🇭🇰 香港-1.43MB/s(Youtube:不良林), server: 511hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 511hk.fans8.xyz}}
+  - {name: 🇬🇧 英国-2.97MB/s(Youtube:不良林), server: jgwld2.gaox.ml, port: 443, type: trojan, password: d7fd8aaa-4581-4281-80aa-4b63e5e1f157, sni: jgwld2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.79MB/s(Youtube:不良林), server: tt6.tjvpn.top, port: 443, type: trojan, password: 0cb2cd1f-870b-485c-914a-60aba39eed39, sni: tt6.tjvpn.top, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-240.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-183.0KB/s(Youtube:不良林)
       - 乌克兰-178.0KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-252.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-12.91MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-9.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.82MB/s(Youtube:不良林)
-      - 未知国家-546.9KB/s(Youtube:不良林)
-      - 未知国家-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.85MB/s(Youtube:不良林)
+      - 以色列-5.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-546.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.43MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.79MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇳🇱 荷兰-240.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-183.0KB/s(Youtube:不良林)
       - 乌克兰-178.0KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-252.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-12.91MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-9.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.82MB/s(Youtube:不良林)
-      - 未知国家-546.9KB/s(Youtube:不良林)
-      - 未知国家-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.85MB/s(Youtube:不良林)
+      - 以色列-5.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-546.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.43MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.79MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-240.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-183.0KB/s(Youtube:不良林)
       - 乌克兰-178.0KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-252.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-12.91MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-9.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.82MB/s(Youtube:不良林)
-      - 未知国家-546.9KB/s(Youtube:不良林)
-      - 未知国家-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.85MB/s(Youtube:不良林)
+      - 以色列-5.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-546.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.43MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.79MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-1.43MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇳🇱 荷兰-240.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-183.0KB/s(Youtube:不良林)
       - 乌克兰-178.0KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-252.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-12.91MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-9.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.82MB/s(Youtube:不良林)
-      - 未知国家-546.9KB/s(Youtube:不良林)
-      - 未知国家-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.85MB/s(Youtube:不良林)
+      - 以色列-5.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-546.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.43MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.79MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-240.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-183.0KB/s(Youtube:不良林)
       - 乌克兰-178.0KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-252.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-12.91MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-9.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.82MB/s(Youtube:不良林)
-      - 未知国家-546.9KB/s(Youtube:不良林)
-      - 未知国家-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.85MB/s(Youtube:不良林)
+      - 以色列-5.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-546.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.43MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.79MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-240.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-183.0KB/s(Youtube:不良林)
       - 乌克兰-178.0KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-252.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-12.91MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-9.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.82MB/s(Youtube:不良林)
-      - 未知国家-546.9KB/s(Youtube:不良林)
-      - 未知国家-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.85MB/s(Youtube:不良林)
+      - 以色列-5.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-546.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.43MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.79MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-240.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-183.0KB/s(Youtube:不良林)
       - 乌克兰-178.0KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-252.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-12.91MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-9.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.82MB/s(Youtube:不良林)
-      - 未知国家-546.9KB/s(Youtube:不良林)
-      - 未知国家-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.85MB/s(Youtube:不良林)
+      - 以色列-5.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-546.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.43MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.79MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
