--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,13 +5,13 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 乌克兰-178.0KB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
-  - {name: 🇳🇱 荷兰-252.0KB/s(Youtube:不良林), server: 213.183.59.211, port: 9005, type: ss, cipher: aes-256-cfb, password: ZET59LF6DvCC8KVt}
-  - {name: 🇺🇸 美国-4.73MB/s(Youtube:不良林), server: fhcarm1.gaox.ml, port: 443, type: trojan, password: 05742120-ce23-4cc8-88f5-6d221ce45bf4, sni: fhcarm1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-2.85MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 以色列-5.15MB/s(Youtube:不良林), server: ru1.lolvps.xyz, port: 40040, type: vmess, uuid: 2b8e4fc6-0112-4b26-8c17-1bfef9a3ff99, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /6129CFHR, ws-headers: {Host: ru1.lolvps.xyz}}
-  - {name: 🇺🇸 美国-546.9KB/s(Youtube:不良林), server: v3.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v3.ssrsub.com}}
-  - {name: 🇺🇸 美国-1.73MB/s(Youtube:不良林), server: oz.moonfree.top, port: 443, type: vmess, uuid: 6e9eeae6-c3d1-439e-9f7a-213fe09b2dbe, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: oz.moonfree.top}}
+  - {name: 🇳🇱 荷兰-218.7KB/s(Youtube:不良林), server: 213.183.59.211, port: 9097, type: ss, cipher: aes-256-cfb, password: Sn5B7jTqr76aCJT8}
+  - {name: 🇨🇳 中国-3.17MB/s(Youtube:不良林), server: 43.154.77.196, port: 38539, type: vmess, uuid: a379bd7f-9d0d-4fb5-90c2-9b302782c4d6, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [43.154.77.196]}}}
+  - {name: 🇨🇳 中国-234.6KB/s(Youtube:不良林), server: fkgfw-prod.i.sxl.cn, port: 443, type: ss, cipher: aes-256-cfb, password: E4DNMf73kHPrd8Qq7aqGPf7f}
+  - {name: 🇬🇧 英国-3.14MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-381.9KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 未知国家-3.52MB/s(Youtube:不良林), server: vfly9.win, port: 443, type: vmess, uuid: 825136bb-fc0a-4f43-8307-dc2e36f27e2d, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly9.win}}
+  - {name: 🇺🇸 美国-245.6KB/s(Youtube:不良林), server: v3.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v3.ssrsub.com}}
   - {name: 🇭🇰 香港-1.43MB/s(Youtube:不良林), server: 511hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 511hk.fans8.xyz}}
   - {name: 🇬🇧 英国-2.97MB/s(Youtube:不良林), server: jgwld2.gaox.ml, port: 443, type: trojan, password: d7fd8aaa-4581-4281-80aa-4b63e5e1f157, sni: jgwld2.gaox.ml, skip-cert-verify: true}
   - {name: 🇯🇵 日本-1.79MB/s(Youtube:不良林), server: tt6.tjvpn.top, port: 443, type: trojan, password: 0cb2cd1f-870b-485c-914a-60aba39eed39, sni: tt6.tjvpn.top, skip-cert-verify: true}
@@ -21,13 +21,13 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 乌克兰-178.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-252.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.85MB/s(Youtube:不良林)
-      - 以色列-5.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-546.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-218.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-234.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-381.9KB/s(Youtube:不良林)
+      - 未知国家-3.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-245.6KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.43MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.97MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.79MB/s(Youtube:不良林)
@@ -36,13 +36,13 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 乌克兰-178.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-252.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.85MB/s(Youtube:不良林)
-      - 以色列-5.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-546.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-218.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-234.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-381.9KB/s(Youtube:不良林)
+      - 未知国家-3.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-245.6KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.43MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.97MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.79MB/s(Youtube:不良林)
@@ -52,13 +52,13 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 乌克兰-178.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-252.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.85MB/s(Youtube:不良林)
-      - 以色列-5.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-546.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-218.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-234.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-381.9KB/s(Youtube:不良林)
+      - 未知国家-3.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-245.6KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.43MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.97MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.79MB/s(Youtube:不良林)
@@ -73,13 +73,13 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 乌克兰-178.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-252.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.85MB/s(Youtube:不良林)
-      - 以色列-5.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-546.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-218.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-234.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-381.9KB/s(Youtube:不良林)
+      - 未知国家-3.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-245.6KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.43MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.97MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.79MB/s(Youtube:不良林)
@@ -88,13 +88,13 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 乌克兰-178.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-252.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.85MB/s(Youtube:不良林)
-      - 以色列-5.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-546.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-218.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-234.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-381.9KB/s(Youtube:不良林)
+      - 未知国家-3.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-245.6KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.43MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.97MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.79MB/s(Youtube:不良林)
@@ -104,13 +104,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 乌克兰-178.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-252.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.85MB/s(Youtube:不良林)
-      - 以色列-5.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-546.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-218.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-234.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-381.9KB/s(Youtube:不良林)
+      - 未知国家-3.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-245.6KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.43MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.97MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.79MB/s(Youtube:不良林)
@@ -129,13 +129,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 乌克兰-178.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-252.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.85MB/s(Youtube:不良林)
-      - 以色列-5.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-546.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-218.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-234.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-381.9KB/s(Youtube:不良林)
+      - 未知国家-3.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-245.6KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.43MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.97MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.79MB/s(Youtube:不良林)
