--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇬🇧 英国-2.97MB/s(Youtube:不良林), server: jgwld2.gaox.ml, port: 443, type: trojan, password: d7fd8aaa-4581-4281-80aa-4b63e5e1f157, sni: jgwld2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.23MB/s(Youtube:不良林), server: 43.154.77.196, port: 38539, type: vmess, uuid: a379bd7f-9d0d-4fb5-90c2-9b302782c4d6, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [43.154.77.196]}}}
-  - {name: 🇬🇧 英国-3.14MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-188.3KB/s(Youtube:不良林), server: s3.upyun.online, port: 12340, type: trojan, password: c0276440-f163-4f40-a08c-78b158ce6c4f, sni: s3.upyun.online, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.73MB/s(Youtube:不良林), server: fhcarm1.gaox.ml, port: 443, type: trojan, password: 05742120-ce23-4cc8-88f5-6d221ce45bf4, sni: fhcarm1.gaox.ml, skip-cert-verify: true}
-  - {name: 未知国家-1.26MB/s(Youtube:不良林), server: v4.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v4.ssrsub.com}}
-  - {name: 🇺🇸 美国-1.46MB/s(Youtube:不良林), server: v1.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v1.ssrsub.com}}
-  - {name: 🇷🇺 俄罗斯联邦-303.8KB/s(Youtube:不良林), server: 213.183.53.177, port: 9037, type: ss, cipher: aes-256-cfb, password: TN2YqghxeFDKZfLU}
+  - {name: 🇺🇸 美国-3.22MB/s(Youtube:不良林), server: fhcarm1.gaox.ml, port: 443, type: trojan, password: 05742120-ce23-4cc8-88f5-6d221ce45bf4, sni: fhcarm1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-383.3KB/s(Youtube:不良林), server: 521hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 521hk.fans8.xyz}}
+  - {name: 🇨🇳 中国-1.44MB/s(Youtube:不良林), server: 523hk1.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 523hk1.fans8.xyz}}
+  - {name: 🇳🇱 荷兰-185.0KB/s(Youtube:不良林), server: 213.183.59.211, port: 9097, type: ss, cipher: aes-256-cfb, password: Sn5B7jTqr76aCJT8}
+  - {name: 🇸🇬 新加坡-1.09MB/s(Youtube:不良林), server: 157.230.41.220, port: 29596, type: ss, cipher: aes-256-cfb, password: e6c1cf51375c407d92d110881a825acb}
+  - {name: 🇯🇵 日本-495.1KB/s(Youtube:不良林), server: tt6.tjvpn.top, port: 443, type: trojan, password: 0cb2cd1f-870b-485c-914a-60aba39eed39, sni: tt6.tjvpn.top, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-265.8KB/s(Youtube:不良林), server: 213.183.53.177, port: 9037, type: ss, cipher: aes-256-cfb, password: TN2YqghxeFDKZfLU}
   - {name: 🇷🇺 俄罗斯联邦-2.96MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
   - {name: 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-931.7KB/s(Youtube:不良林), server: jgwld1.gaox.ml, port: 443, type: trojan, password: 02e653c9-7c93-46a9-999d-11834bd0c577, sni: jgwld1.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-2.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.23MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.14MB/s(Youtube:不良林)
-      - 🇬🇧 英国-188.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
-      - 未知国家-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-303.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-383.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.44MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-185.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
+      - 🇯🇵 日本-495.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-265.8KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.96MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
+      - 🇬🇧 英国-931.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇬🇧 英国-2.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.23MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.14MB/s(Youtube:不良林)
-      - 🇬🇧 英国-188.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
-      - 未知国家-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-303.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-383.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.44MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-185.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
+      - 🇯🇵 日本-495.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-265.8KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.96MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
+      - 🇬🇧 英国-931.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-2.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.23MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.14MB/s(Youtube:不良林)
-      - 🇬🇧 英国-188.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
-      - 未知国家-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-303.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-383.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.44MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-185.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
+      - 🇯🇵 日本-495.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-265.8KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.96MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
+      - 🇬🇧 英国-931.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇬🇧 英国-2.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.23MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.14MB/s(Youtube:不良林)
-      - 🇬🇧 英国-188.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
-      - 未知国家-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-303.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-383.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.44MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-185.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
+      - 🇯🇵 日本-495.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-265.8KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.96MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
+      - 🇬🇧 英国-931.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇬🇧 英国-2.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.23MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.14MB/s(Youtube:不良林)
-      - 🇬🇧 英国-188.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
-      - 未知国家-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-303.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-383.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.44MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-185.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
+      - 🇯🇵 日本-495.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-265.8KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.96MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
+      - 🇬🇧 英国-931.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-2.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.23MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.14MB/s(Youtube:不良林)
-      - 🇬🇧 英国-188.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
-      - 未知国家-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-303.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-383.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.44MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-185.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
+      - 🇯🇵 日本-495.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-265.8KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.96MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
+      - 🇬🇧 英国-931.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-2.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.23MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.14MB/s(Youtube:不良林)
-      - 🇬🇧 英国-188.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
-      - 未知国家-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-303.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-383.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.44MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-185.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
+      - 🇯🇵 日本-495.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-265.8KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.96MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
+      - 🇬🇧 英国-931.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
